Add pre-launch announcement on home page

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -33,6 +33,13 @@
           </div>
   			</div>
   		</section>
+  		<section id="free-integration" class="pt-50 pb-50 section-is-it-for bg-grey-e4">
+  			<div class="container bg-grey-f9 text-center pt-20 pb-20" style="border: 5px dashed;">
+          <h1 class="fw700 pb-20">Nuvla.io Marketplace Pre-Launch</h1>
+          <h2>Limited offer October only: free integration of your app into the Marketplace</h2>
+          <h3>Interested? Read details <a href="/products-and-services/nuvla-io/marketplace">here</a>.</h3>
+  			</div>
+  		</section>
   		<div class="section-services section-full">
   			<div class="container">
   				<div class="row justify-content-center">
