--- a/_includes/highlighted-with-image-no-title-item-no-truncation.html
+++ b/_includes/highlighted-with-image-no-title-item-no-truncation.html
@@ -16,6 +16,6 @@
           {% else %}
             {% assign url = post.url  %}
           {% endif %}
-          <a class="btn-sixsq color-3 text-center bottom" href="{{ url }}"><i class="far fa-plus-square"></i>  Take a Look</a>
+          <a class="btn-sixsq color-3 text-center bottom" href="{{ url }}">Take a Look</a>
         </div>
 			</div>
