--- a/_includes/nuvla-io-banner.html
+++ b/_includes/nuvla-io-banner.html
@@ -1,1 +1,9 @@
-    {% include standard-banner.html %}
+		<!-- Start Banner -->
+		<section class="default-banner">
+    	<div class="container banner-content pt-0 pb-0">
+          <img class="pt-20 pb-30" style="max-width: 100%" src="/img/content/nuvla/nuvla.io_logo_red_on_transparent_512px.png"/>
+      		<h2 class="header mb-20">{{ page.header }}</h2>
+      		<h2 class="subheader">{{ page.subheader }}, <span style="text-decoration: underline;">with advanced security</span></h2>
+    	</div>
+		</section>
+		<!-- Stop Banner -->
