--- a/_includes/video.html
+++ b/_includes/video.html
@@ -7,7 +7,8 @@
 			<div class="container">
 				<div class="row justify-content-center pb-50">
 					<div class="col-md-8 section-title text-center">
-    				<h2 class="fw700 pb-20">{{ include.title }}</h2>
+    				<h2 class="fw700 pb-20">{{ include.title }}.</h2>
+    				<p class="fw700 pb-20">{{ include.subtitle }}</p>
             <div class='embed-container'><iframe src='https://www.youtube.com/embed/{{ include.video-id }}' frameborder='0' allowfullscreen></iframe></div>
       			</div>
 					</div>
