--- a/_includes/welcome-banner-item.html
+++ b/_includes/welcome-banner-item.html
@@ -2,6 +2,6 @@
 	<div class="banner-content">
 		<h2 class="text-white mb-30">{{ post.title }}</h2>
 		<p class="text-white">{{ post.content | strip_html }}</p>
-				<a class="btn-sixsq" href="{{ post.link }}"><i class="far fa-plus-square"></i> Learn more</a>
+				<a class="btn-sixsq" href="{{ post.link }}">Learn more</a>
 	</div>
 </div>
