--- a/_includes/welcome-newsletter.html
+++ b/_includes/welcome-newsletter.html
@@ -7,14 +7,13 @@
 							<i class="fas fa-paper-plane" aria-hidden="true"></i>
 						</div>
 						<div class="col-md-10 title-newsletter">
-							<h2 class="fw600">Interested?</h2> 
-							<h2 class="fw600">Keep up to date.</h2>
+							<h2 class="fw600 pt-20">Stay up to date:</h2>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 					<div class="col-md-6 col-sm-12 col-xs-12 newsletter nopadding">
 						<div class="newsletter-text">
-							<h3 class="fw700">Subscribe to Email Updates.</h3>
+							<h3 class="fw700">Subscribe to our Newletter</h3>
 						</div>
             <!--[if lte IE 8]>
               <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
