--- a/_includes/welcome-partners-item.html
+++ b/_includes/welcome-partners-item.html
@@ -1,8 +1,5 @@
-<div class="item partner-item">
-  <div class="mt-20 image-content">
-		<img src="{{ post.image }}" alt="partners-homepage">
-	</div>
-	<div class="mt-20">
-		<p>{{ post.content | strip_html | truncatewords: 30 }}</p>
+<div class="item">
+  <div class="mt-0 image-content" style="height: 120px;">
+		<img style="width: 100%;" src="{{ post.image }}" alt="partners-homepage">
 	</div>
 </div>
