--- a/_includes/welcome-services-item.html
+++ b/_includes/welcome-services-item.html
@@ -9,7 +9,7 @@
 							<p class="fw100">{{ post.content }}</p>
 							<div class="line mb-20"></div>
 							<p class="fw100">{{ post.action-text }}</p>
-							<a class="btn-sixsq " href="{{ post.link }}"><i class="far fa-plus-square"></i> Learn more</a>
+							<a class="btn-sixsq " href="{{ post.link }}">Learn more</a>
 						</div>
           {% if thecycle == 'odd' or post.align-text == 'left' %}
             <div class="col-md-6 col-sm-12"></div>
