--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -11,62 +11,38 @@
 		<section class="section-is-it-for">
 			<div class="container">
 				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
-					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
+					<div class="col-md-3 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
               <i class="fas fa-newspaper"></i>
             </div>
             <h3 class="mt-20 text-center fw600">News</h3>
-						<p class="mt-10 text-center">All the latest from SixSq.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/news"><i class="far fa-plus-square"></i>  Read</a>
+						<p class="mt-10 text-center">Latest from SixSq.</p>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/news">Read</a>
 						</p>
 					</div>
-					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
+					<div class="col-md-3 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
               <i class="fas fa-video"></i>
             </div>
             <h3 class="mt-20 text-center fw600">Videos</h3>
 						<p class="mt-10 text-center">Sit back and watch.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/videos"><i class="far fa-plus-square"></i>  Watch</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/videos">Watch</a>
 					</div>
-					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
+					<div class="col-md-3 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
               <i class="fas fa-rss"></i>
             </div>
             <h3 class="mt-20 text-center fw600">Blog</h3>
 						<p class="mt-10 text-center">Read our latest thoughts.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="https://media.sixsq.com/blog"><i class="far fa-plus-square"></i>  Read</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="https://media.sixsq.com/blog">Read</a>
 					</div>
-					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
+					<div class="col-md-3 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
               <i class="fas fa-book"></i>
             </div>
             <h3 class="mt-20 text-center fw600">Documentation</h3>
-						<p class="mt-10 text-center">Complete Nuvla.io documentation.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="https://docs.nuvla.io"><i class="far fa-plus-square"></i>  Learn</a>
-					</div>
-          <!-- <div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
-            <div class="icon-title">
-              <i class="fas fa-book"></i>
-            </div>
-            <h3 class="mt-20 text-center fw600">e-Guides</h3>
-            <p class="mt-10 text-center">Insights into where and why our tech is useful.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/eguides"><i class="far fa-plus-square"></i>  Learn</a>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
-            <div class="icon-title">
-              <i class="fas fa-book"></i>
-            </div>
-            <h3 class="mt-20 text-center fw600">Solution Briefs</h3>
-            <p class="mt-10 text-center">More detail on our solutions.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/solution-briefs"><i class="far fa-plus-square"></i>  Explore</a>
-          </div> -->
-					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
-            <div class="icon-title">
-              <i class="fas fa-chalkboard-teacher"></i>
-            </div>
-            <h3 class="mt-20 text-center fw600">Webinars</h3>
-						<p class="mt-10 text-center">Discover and learn with our experts.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/webinar"><i class="far fa-plus-square"></i>  Learn</a>
+						<p class="mt-10 text-center">All the technical details.</p>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="https://docs.nuvla.io">Learn</a>
 					</div>
         </div>
 			</div>
