--- a/_layouts/nuvla-io-marketplace.html
+++ b/_layouts/nuvla-io-marketplace.html
@@ -13,6 +13,7 @@
 			</div>
     </section>
 		<section class="section-is-it-for bg-grey-e4 pt-50 pb-50">
+      <a class="anchor" id="marketplace-features"></a>
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-12 section-title text-center">
