--- a/_layouts/nuvla-spec.html
+++ b/_layouts/nuvla-spec.html
@@ -24,7 +24,7 @@
     									<h3 class="mt-20 text-center fw600">{{ post.title }}</h3>
     									<p class="mt-10 text-center">{{ post.content }}</p>
                     	<div class="section-news-button">
-                        <a class="btn-sixsq mt-20 color-2" href="{{ post.link }}"><i class="far fa-plus-square"></i>  Learn more</a>
+                        <a class="btn-sixsq mt-20 color-2" href="{{ post.link }}">Learn more</a>
                     	</div>
       							</div>
                   {% endif %}
@@ -32,22 +32,6 @@
               </div>
       			</div>
         </div>
-      	<!-- <div class="container">
-      		<div class="row justify-content-center mt-50 mb-20">
-      			<div class="col-md-12 section-title text-center">
-      				<h2 class="pb-10 fw700">Read the technical specification</h2>
-      			</div>
-      		</div>
-          <div id="slipstream-product-description" class="col-md-12 text-center">
-            <p>If you want to know more about Nuvla, take a look at the product description.  </p>
-          </div>
-          <div class="col-md-12 mb-50 text-center">
-            <img style="max-height: 280px;" src="/img/content/product_descriptions/slipstream_product_description_screen_shot.png" alt="slipstream_product_description"/>
-						<p class="button mt-10 text-center">
-							<a class="btn-sixsq mt-20 color-3 text-center" href="https://media.sixsq.com/hubfs/Marketing%20Materials/Product_Descriptions/Nuvla-Product-Description-2019.pdf"><i class="far fa-plus-square"></i> Read more</a>
-						</p>
-          </div>
-        </div> -->
       </div>
       {% include whats-next.html %}
   		<!-- End Section News -->	
