--- a/_layouts/partner_prog.html
+++ b/_layouts/partner_prog.html
@@ -29,7 +29,7 @@
             {% endfor %}
 					</div>
     			<div class="col-md-12 text-center">
-    			  <a class="btn-sixsq color-dark" href="/partner/benefits"><i class="far fa-plus-square"></i>  Discover all benefits</a>
+    			  <a class="btn-sixsq color-dark" href="/partner/benefits">Discover all benefits</a>
           </div>
 				</div>
 			</div>
