--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -1,4 +1,4 @@
-    <div class="common-header animated">
+    <div class="common-header">
 			<div class="container">
         <nav class="navbar navbar-toggleable-sm navbar-inverse main-navbar">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,13 +13,6 @@
                 <a class="nav-link" href="/products-and-services/nuvla-io/overview" id="navbarDropdownMenuLink-nuvla-io" aria-haspopup="true" aria-expanded="false">Nuvla.io</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-product" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Software</a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-products">
-                  <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox</b>: Software that turns your hardware into a Smart Edge Device</a>
-                  <a class="dropdown-item" href="/products-and-services/nuvla/overview"><b>Nuvla</b>: The open source software behind Nuvla.io</a>
-                </div>
-              </li>
-              <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-casestudies" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Case Studies</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-solutions">
                   <a class="dropdown-item" href="/casestudies/city/overview"><b>City</b>: Edge, Cloud and IoT solutions for Smart Cities</a>
@@ -27,6 +20,13 @@
                   <a class="dropdown-item" href="/casestudies/retail/overview"><b>Retail</b>: In-store (real-time) analytics</a>
                   <!-- <a class="dropdown-item" href="/casestudies/factory/overview"><b>Factory</b>: Smart manufacturing</a> -->
                   <a class="dropdown-item" href="/casestudies/science/overview"><b>Science</b>: Big Data at the Edge and in the Cloud for Science</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-product" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Software</a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-products">
+                  <a class="dropdown-item" href="/products-and-services/nuvlabox/overview"><b>NuvlaBox</b>: Software that turns your hardware into a Smart Edge Device</a>
+                  <a class="dropdown-item" href="/products-and-services/nuvla/overview"><b>Nuvla</b>: The open source software behind Nuvla.io</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
@@ -57,7 +57,7 @@
                 <a class="nav-link" href="https://nuvla.io/ui/sign-in" id="navbarDropdownMenuLink-sign-in" aria-haspopup="true" aria-expanded="false">Sign In</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link link" href="https://nuvla.io/ui/sign-up" id="navbarDropdownMenuLink-sign-up" aria-haspopup="true" aria-expanded="false">Sign Up</a>
+                <a class="nav-link link" href="https://nuvla.io/ui/sign-up" id="navbarDropdownMenuLink-sign-up" aria-haspopup="true" aria-expanded="false">Free Trial</a>
               </li>
             </ul>
           </div>
