--- a/_includes/highlighted-with-image-item.html
+++ b/_includes/highlighted-with-image-item.html
@@ -16,6 +16,6 @@
               {% else %}
                 {% assign url = post.url  %}
               {% endif %}
-              <a class="btn-sixsq mt-20 color-3 text-center" href="{{ url }}"><i class="far fa-plus-square"></i>  Take a Look</a>
+              <a class="btn-sixsq mt-20 color-3 text-center" href="{{ url }}">Take a Look</a>
 						</p>
 					</div>
