--- a/_includes/nuvla-io-sub-menu.html
+++ b/_includes/nuvla-io-sub-menu.html
@@ -25,7 +25,13 @@
                 <a class="nav-link" id="navbarMenuLink-security" href="/products-and-services/{{ page.product }}/security">Security</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec">Tech Specs</a>
+                <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec">Getting Started</a>
+              </li>
+              <li class="nav-item">
+                <a class="btn-sixsq text-center" style="margin-top: 2px;" href="https://nuvla.io/ui/sign-in">Sign-in</a>
+              </li>
+              <li class="nav-item menu-sign-in">
+                <a class="btn-sixsq text-center" style="margin-top: 2px;" href="https://nuvla.io/ui/sign-up">Free trial</a>
               </li>
             </ul>
           </div>
