--- a/_includes/welcome-partners-item.html
+++ b/_includes/welcome-partners-item.html
@@ -1,5 +1,7 @@
-<div class="item">
-  <div class="mt-0 image-content" style="height: 120px;">
-		<img style="width: 100%;" src="{{ post.image }}" alt="partners-homepage">
-	</div>
+<div class="col-lg-3 col-md-12 col-sm-12 item icon animated bandw" style="align-item: center; display: flex; flex-direction: column; justify-content: space-between">
+  <div class="item {{ post.css-class }}" style="height: 140px;">
+    <div class="mt-0 image-content">
+  		<img style="width: {{ post.css-width }}" src="{{ post.image }}" alt="partners-homepage">
+  	</div>
+  </div>
 </div>
