--- a/_layouts/nuvla-io-marketplace.html
+++ b/_layouts/nuvla-io-marketplace.html
@@ -5,9 +5,8 @@
     {% include standard-header.html %}
 	<main>
     {% include {{ page.product }}-banner.html %}
-    {% include {{ page.product }}-sub-menu.html %}
 		<!-- Start what do you get? -->	
-		<section class="section-is-it-for pb-20">
+		<section class="section-is-it-for pt-50 pb-20">
 			<div class="container">
         {{ page.content | markdownify }}
 			</div>
