--- a/_layouts/product-simple.html
+++ b/_layouts/product-simple.html
@@ -11,6 +11,7 @@
           {{ page.content | markdownify }}
         </div>
       </section>
+      {% include video.html video-id='s0NQjTgmaU0' title='Become an Expert' subtitle='Created by this Cristóvão (Cris) Cordeiro, R&D Project Manager at SixSq, this Youtube channel gives you all the detailed information needed to master Nuvla.io and created amazing edge-to-cloud solutions.' %}
       {% include whats-next.html %}
   		<!-- End Section News -->	
       {% include primary-footer.html %}
