--- a/sass/theme/_banner.scss
+++ b/sass/theme/_banner.scss
@@ -157,7 +157,7 @@
 	h2 {
 		font-size: 48px;
 		font-weight: 600;
-		text-transform: uppercase;
+//		text-transform: uppercase;
 		@include tablet {
 			font-size: 36px;
 		}
