--- a/sass/theme/_feature.scss
+++ b/sass/theme/_feature.scss
@@ -16,3 +16,10 @@
     color: $color-primary;
   }
 }
+.banner-icon {
+	text-align: center;
+  svg {
+  	font-size: 800%;
+    color: $color-primary;
+  }
+}
