--- a/sass/theme/_reset.scss
+++ b/sass/theme/_reset.scss
@@ -453,3 +453,12 @@ a.anchor {
   top: -100px;
   visibility: hidden;
 }
+
+.small-image {
+  max-width: 50%;
+}
+//
+//.cc-compliance {
+//  padding-right: 50px !important;
+//  color: blue !important;
+//}
