--- a/sass/theme/_variables.scss
+++ b/sass/theme/_variables.scss
@@ -1,8 +1,8 @@
 
 // Font Family
 
-$primary-font	       : 'Ubuntu', sans-serif;
-$title-font	         : 'Ubuntu', sans-serif;
+$primary-font	       : 'Arial', sans-serif;
+$title-font	         : 'Arial', sans-serif;
 $title-color	       : #333333;
 $text-color		       : #444444;
 $border-color        : #dddddd;
