--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -1,4 +1,4 @@
-    <div class="common-header">
+    <div class="common-header animated">
 			<div class="container">
         <nav class="navbar navbar-toggleable-sm navbar-inverse main-navbar">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,7 +10,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/products-and-services/nuvla-io/overview" id="navbarDropdownMenuLink-nuvla-io" aria-haspopup="true" aria-expanded="false">Nuvla.io</a>
+                <a class="nav-link" href="https://nuvla.io" id="navbarDropdownMenuLink-nuvla-io" aria-haspopup="true" aria-expanded="false">Nuvla.io</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-casestudies" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Case Studies</a>
