--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ Created: 21/11/2017
 
 body {
   color: #444444;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 24px;
@@ -108,7 +108,7 @@ a:hover {
 
 h1, h2, h3,
 h4, h5, h6 {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Arial", sans-serif;
   color: #333333;
   line-height: 1.1em;
   margin-bottom: 0;
@@ -119,7 +119,7 @@ h4, h5, h6 {
 .h4, .h5, .h6 {
   margin-bottom: 0;
   margin-top: 0;
-  font-family: "Ubuntu", sans-serif; }
+  font-family: "Arial", sans-serif; }
 
 h1, .h1 {
   font-size: 36px; }
@@ -695,6 +695,9 @@ a.anchor {
   top: -100px;
   visibility: hidden; }
 
+.small-image {
+  max-width: 50%; }
+
 .header-welcome, .header-std {
   position: relative;
   z-index: 99999; }
@@ -710,7 +713,6 @@ a.anchor {
 
 .common-header {
   padding: 0;
-  background: #333 !important;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -753,8 +755,7 @@ a.anchor {
   width: 100%;
   left: 0; }
 .home-sixsq .is-sticky .common-header, .sixsq .is-sticky .common-header {
-  background: #333;
-  background-color: #333 !important; }
+  background: #333; }
 
 .navbar .navbar-nav .nav-item a.nav-link, .navbar .navbar-nav .nav-item a.dropdown-item {
   font-size: 13px;
@@ -770,7 +771,7 @@ a.anchor {
 .navbar .navbar-nav .nav-item a.link {
   text-decoration: underline !important; }
 .navbar .navbar-nav .menu-sign-in {
-  margin-left: 10px; }
+  margin-left: 8px; }
   @media (max-width: 767px) {
     .navbar .navbar-nav .menu-sign-in {
       margin-left: 0px; } }
@@ -804,6 +805,12 @@ a.anchor {
   text-align: center; }
   .icon-title svg {
     font-size: 600%;
+    color: #9B1313; }
+
+.banner-icon {
+  text-align: center; }
+  .banner-icon svg {
+    font-size: 800%;
     color: #9B1313; }
 
 .default-banner {
@@ -898,8 +905,7 @@ a.anchor {
   z-index: 3; }
   .banner-content h2 {
     font-size: 48px;
-    font-weight: 600;
-    text-transform: uppercase; }
+    font-weight: 600; }
     @media (min-width: 768px) and (max-width: 992px) {
       .banner-content h2 {
         font-size: 36px; } }
@@ -1058,7 +1064,7 @@ a.anchor {
   margin-bottom: 10px;
   margin-top: 10px;
   font-weight: 400;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 18px;
   line-height: 1.5em; }
 .section-is-it-for ul, .section-is-it-for ol {
