--- a/sass/theme/_header.scss
+++ b/sass/theme/_header.scss
@@ -21,7 +21,7 @@
 
 .common-header {
 	padding: 0;
-  background: $header-sticky !important;
+//  background: $header-sticky !important;
 	@include mobile {
     background: $header-sticky !important;
 		padding: 0;
@@ -82,7 +82,7 @@
   .is-sticky {
     .common-header {
       background: $header-sticky;
-      background-color: $header-sticky !important;
+//      background-color: $header-sticky !important;
     }
   }
 }
@@ -109,7 +109,7 @@
       }
     }
     .menu-sign-in {
-      margin-left: 10px;
+      margin-left: 8px;
       @include mobile {
         margin-left: 0px;
       }
@@ -141,3 +141,7 @@
     }
   }
 }
+//
+//.nav-item .btn-sixsq {
+//  margin-left: 8px;
+//}
