--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -39,7 +39,7 @@
   			<div class="container bg-grey-f9 text-center pt-20 pb-20 highlight-image" style="border: 5px dashed;">
           <h1 class="fw700 pb-20">Nuvla.io Marketplace Pre-Launch</h1>
           <h2>Limited offer October only: free integration of your app into the Marketplace</h2>
-          <h3>Interested? Read details <a href="/products-and-services/nuvla-io/marketplace">here</a>.</h3>
+          <h3>Interested? Read details <a href="https://nuvla.io/marketplace">here</a>.</h3>
   			</div>
   		</section>
   		<div class="section-services section-full">
