--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -10,7 +10,7 @@
           <img class="pt-20 pb-30" style="max-width: 100%" src="/img/content/nuvla/nuvla.io_logo_red_on_transparent_512px.png"/>
       		<h2 class="header mb-20">{{ page.header }}</h2>
       		<h2 class="subheader">{{ page.subheader }}, <span style="text-decoration: underline;">with advanced security</span></h2>
-  				<a class="btn-sixsq all" href="https://nuvla-io">{{ page.header-action}}</a>
+  				<a class="btn-sixsq all" href="https://nuvla.io">{{ page.header-action}}</a>
       	</div>
       </section>
       <!-- % include welcome-webinar.html % -->
