remove pre-launch announcement

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -5,8 +5,8 @@
     {% include welcome-header.html %}
     <main>
       <section class="default-banner">
-      	<div class="container banner-content pt-0 pb-30">
-      		<h2 class="header pt-20">Home of:</h2>
+      	<div class="container banner-content pt-30 pb-30">
+      		<h2 class="header mt-30">Home of:</h2>
           <img class="pt-20 pb-30" style="max-width: 100%" src="/img/content/nuvla/nuvla.io_logo_red_on_transparent_512px.png"/>
       		<h2 class="header mb-20">{{ page.header }}</h2>
       		<h2 class="subheader">{{ page.subheader }}, <span style="text-decoration: underline;">with advanced security</span></h2>
@@ -35,13 +35,13 @@
           </div>
         </div>
       </section> -->
-  		<section id="free-integration" class="pt-50 pb-50 section-is-it-for bg-blue-e0">
-  			<div class="container bg-grey-f9 text-center pt-20 pb-20 highlight-image" style="border: 5px dashed;">
+      <!-- <section id="free-integration" class="pt-50 pb-50 section-is-it-for bg-blue-e0">
+        <div class="container bg-grey-f9 text-center pt-20 pb-20 highlight-image" style="border: 5px dashed;">
           <h1 class="fw700 pb-20">Nuvla.io Marketplace Pre-Launch</h1>
           <h2>Limited offer October only: free integration of your app into the Marketplace</h2>
           <h3>Interested? Read details <a href="https://nuvla.io/marketplace">here</a>.</h3>
-  			</div>
-  		</section>
+        </div>
+      </section> -->
   		<div class="section-services section-full">
   			<div class="container">
   				<div class="row justify-content-center">
