--- a/_includes/social-media-share.html
+++ b/_includes/social-media-share.html
@@ -1,6 +1,6 @@
             <div class="social-media">
               <ul class="social-media-list">
-                <li>
+                <li style="padding-top: 4px;">
                   <!-- Twitter -->
                   <a class="twitter-share-button"
                     href="https://twitter.com/share"
