--- a/_layouts/nuvlabox-overview.html
+++ b/_layouts/nuvlabox-overview.html
@@ -15,8 +15,8 @@
 
 		<!-- Start what do you get? -->	
 	  <section class="section-full bg-grey-e4 section-news section-partners section-is-it-for relative" style="height: auto;">
-			<div class="container text-center">
-				<h2 class="pb-20 fw700">Key Features.</h2>
+			<div class="container">
+				<h2 class="pb-20 fw700 text-center">Key Features</h2>
 				<div class="row icon-is-it-for ">
         {% for post in site.products-and-services %}
           {% if page.product == post.product or page.uberproduct == post.product %}
