--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -5,11 +5,28 @@
     {% include welcome-header.html %}
     <main>
       <section class="default-banner">
-      	<div class="container banner-content pt-30 pb-30">
-      		<h2 class="header mt-30">Home of:</h2>
-          <img class="pt-20 pb-30" style="max-width: 100%" src="/img/content/nuvla/nuvla.io_logo_red_on_transparent_512px.png"/>
-      		<h2 class="header mb-20">{{ page.header }}</h2>
-      		<h2 class="subheader">{{ page.subheader }}, <span style="text-decoration: underline;">with advanced security</span></h2>
+      	<div class="container banner-content pt-0 pb-20">
+  				<div class="row justify-content-center">
+  					<div class="col-md-12 section-title text-center">
+          		<h2 class="header mt-0">Home of:</h2>
+              <img class="pt-20 pb-30" style="width: 30%" src="/img/content/nuvla/nuvla.io_logo_red_on_transparent_512px.png"/>
+  					</div>
+  					<div class="col-md-12 section-title text-center">
+          		<h2 class="header mb-20">{{ page.header }}</h2>
+          		<h2 class="subheader">{{ page.subheader }}, <span style="text-decoration: underline;">with advanced security</span></h2>
+  					</div>
+    			<div class="container">
+    				<div class="row justify-content-center pt-20">
+    					<div class="col-md-12 section-title text-center">
+    							<h2 class="" style="font-size: 30px;">Why the Edge?</h2>
+    					</div>
+				</div>
+				<div class="row justify-content-center pt-20 pb-40">
+					<div class="col-md-12 section-title text-center">
+            <img class="highlight pl-0 pt-0 pr-0 pb-0 highlight" src="/img/content/animations/why-edge.gif">
+					</div>
+				</div>
+			</div>
   				<a class="btn-sixsq all" href="https://nuvla.io">{{ page.header-action}}</a>
       	</div>
       </section>
