--- a/sass/theme/_section-news-article.scss
+++ b/sass/theme/_section-news-article.scss
@@ -5,6 +5,10 @@
   a {
     font-weight: 600;
   }
+  ul {
+    list-style-type: disc;
+    padding-left: 20px;
+  }
   .date {
     font-weight: 600;
     margin-bottom: 20px;
