--- a/_layouts/nuvla-overview.html
+++ b/_layouts/nuvla-overview.html
@@ -14,17 +14,17 @@
 		</section>
     <section class="section-is-it-for bg-white">
     	<div class="container">
-    			<div class="col-md-12 mt-20 section-title text-center pt-50">
-    				<h2 class="pb-10 fw700">Standing on the shoulders of giants</h2>
-            <h4 class="mt-20 ml-20 mr-50">Nuvla builds on the important work of other open source projects. Here are the key technologies, tools and libraries we use to build Nuvla. This ensures a software which is scalable, easy to test and operate, as well as simple to extend and evolve.</h4>
-            <div class="row justify-content-center icon-is-it-for pb-50 pt-50">
+    			<div class="col-md-12 mt-20 section-title pt-50">
+    				<h2 class="pb-10 fw700 text-center">Standing on the shoulders of giants</h2>
+            <h4 class="mt-20 ml-20 mr-50 text-center">Nuvla builds on the important work of other open source projects. Here are the key technologies, tools and libraries we use to build Nuvla. This ensures a software which is scalable, easy to test and operate, as well as simple to extend and evolve.</h4>
+            <div class="row icon-is-it-for pb-50 pt-50">
               {% for post in site.products-and-services %}
                 {% if post.class == 'tech' %}
     							<div class="col-md-4 col-sm-4 icon item animated">
   									<img src="{{ post.image }}" alt="{{ post.title }}" width="100%">
   									<h3 class="mt-20 text-center fw600">{{ post.title }}</h3>
-  									<p class="mt-10 text-center">{{ post.content }}</p>
-                  	<div class="section-news-button">
+  									<p class="mt-10">{{ post.content }}</p>
+                  	<div class="section-news-button text-center">
                       <a class="btn-sixsq mt-20 color-2" href="{{ post.link }}">Learn more</a>
                   	</div>
     							</div>
@@ -36,8 +36,8 @@
     </section>
 
 	  <section class="section-full bg-grey-e4 section-news section-partners section-is-it-for relative" style="height: auto;">
-			<div class="container text-center">
-				<h2 class="pb-20 fw700">Key Features.</h2>
+			<div class="container">
+				<h2 class="pb-20 fw700 text-center">Key Features</h2>
 				<div class="row icon-is-it-for ">
         {% for post in site.products-and-services %}
           {% if page.product == post.product or page.uberproduct == post.product %}
