--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -27,7 +27,7 @@
 
 	  <section class="section-full bg-grey-e4 section-news section-partners section-is-it-for relative" style="height: auto;">
 			<div class="container text-center">
-				<h2 class="pb-20 fw700">Key Features.</h2>
+				<h2 class="pb-20 fw700">Key Features</h2>
 				<div class="row icon-is-it-for ">
         {% for post in site.products-and-services %}
           {% if page.product == post.product or page.uberproduct == post.product %}
@@ -47,7 +47,7 @@
 
 	  <section class="section-full bg-grey-f9 section-news section-partners section-is-it-for relative" style="height: auto;">
 			<div class="container text-center">
-				<h2 class="pb-20 fw700">Customers.</h2>
+				<h2 class="pb-20 fw700">Customers</h2>
 				<div class="row icon-is-it-for">
         {% for post in site.customers %}
           {% if post.top-story == true %}
