--- a/sass/theme/_reset.scss
+++ b/sass/theme/_reset.scss
@@ -457,8 +457,17 @@ a.anchor {
 .small-image {
   max-width: 50%;
 }
-//
-//.cc-compliance {
-//  padding-right: 50px !important;
-//  color: blue !important;
-//}
+
+.highlight {
+	padding: 40px;
+	box-shadow: $hover-shadow-icon;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+
+.social-media-list {
+  list-style-type: none !important;
+  padding-left: 0 !important;
+}
