--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -17,15 +17,15 @@
   					</div>
     			<div class="container">
     				<div class="row justify-content-center pt-20">
-    					<div class="col-md-12 section-title text-center">
+    					<div class="col-md-12 section-title text-center pb-30">
     							<h2 class="" style="font-size: 30px;">Why the Edge?</h2>
     					</div>
 				</div>
-				<div class="row justify-content-center pt-20 pb-40">
-					<div class="col-md-12 section-title text-center">
+        <!-- <div class="row justify-content-center pt-20 pb-40">
+          <div class="col-md-12 section-title text-center">
             <img class="highlight pl-0 pt-0 pr-0 pb-0 highlight" src="/img/content/animations/why-edge.gif">
-					</div>
-				</div>
+          </div>
+        </div> -->
 			</div>
   				<a class="btn-sixsq all" href="https://nuvla.io">{{ page.header-action}}</a>
       	</div>
