--- a/_includes/terms-sub-menu.html
+++ b/_includes/terms-sub-menu.html
@@ -13,16 +13,13 @@
                 <a class="nav-link" id="navbarMenuLink-overview" href="/about/terms">Overview</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-general-terms" href="/terms/general-terms-and-conditions">General Terms</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-eula" href="/terms/eula">EULA</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-aai-privacy" href="/terms/privacy">Privacy</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-aai-privacy" href="/terms/cookie-notice">Cookie Notice</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="navbarMenuLink-nuvla-io-terms" href="https://nuvla.io/terms">Nuvla.io Terms</a>
               </li>
             </ul>
           </div>
