update case studies - add overview - refactor - update city diagram

--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -15,6 +15,7 @@
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-casestudies" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Case Studies</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-solutions">
+                  <a class="dropdown-item" href="/casestudies/overview"><b>Overview</b></a>
                   <a class="dropdown-item" href="/casestudies/city/overview"><b>City</b>: Edge, Cloud and IoT solutions for Smart Cities</a>
                   <a class="dropdown-item" href="/casestudies/outpost/overview"><b>Outpost</b>: Rapid infrastructure for remote areas</a>
                   <a class="dropdown-item" href="/casestudies/retail/overview"><b>Retail</b>: In-store (real-time) analytics</a>
