--- a/_layouts/casestudies.html
+++ b/_layouts/casestudies.html
@@ -4,22 +4,20 @@
   <body class="sixsq bg-grey-f9">
     {% include standard-header.html %}
 	<main>
-    {% include {{ page.product }}-banner.html %}
-    {% include {{ page.product }}-sub-menu.html %}
+    {% include casestudies-banner.html %}
+    {% include casestudies-sub-menu.html %}
     {{ page.content }}
 		<section class="mt-20 section-is-it-for">
 			<div class="container">
-				<div class="row justify-content-center pb-50 pt-50">
+				<div class="row justify-content-center pt-50">
 					<div class="col-md-12 section-title text-center">
-							<h2 class="pb-10 fw700">So many possibilities.</h2>
+							<h2 class="pb-10 fw700">SixSq in action, delivering positive outcome, at scale.</h2>
 					</div>
 				</div>
-				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
-          {% for post in site.products %}
-            {% if post.product == page.product %}
-              {% if post.class == 'usecases' %}
-                {% include carousel-with-icon-item.html %}
-              {% endif %}
+				<div class="row justify-content-center icon-is-it-for pb-50 pt-20">
+          {% for post in site.casestudies %}
+            {% if post.category == page.category %}
+              {% include highlighted-with-image-no-text-item.html %}
             {% endif %}
           {% endfor %}
 				</div>
