--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -9,8 +9,14 @@
           </a>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="https://nuvla.io" id="navbarDropdownMenuLink-nuvla-io" aria-haspopup="true" aria-expanded="false">Nuvla.io</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-nuvla-io" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nuvla.io</a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-nuvla-io">
+                  <a class="dropdown-item" href="https://nuvla.io"><b>Overview</b></a>
+                  <a class="dropdown-item" href="https://nuvla.io/marketplace"><b>Marketplace</b></a>
+                  <a class="dropdown-item" href="https://nuvla.io/pricing"><b>Pricing</b></a>
+                  <a class="dropdown-item" href="https://nuvla.io/security"><b>Security</b></a>
+                </div>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-casestudies" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Case Studies</a>
