--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -13,7 +13,7 @@
   					</div>
   					<div class="col-md-12 section-title text-center">
           		<h2 class="header mb-20">{{ page.header }}</h2>
-          		<h2 class="subheader">{{ page.subheader }}, <span style="text-decoration: underline;">with advanced security</span></h2>
+          		<h2 class="subheader">{{ page.subheader }}, <span style="text-decoration: underline;">plus advanced security</span></h2>
   					</div>
     			<div class="container">
     				<div class="row justify-content-center pt-20">
@@ -65,7 +65,7 @@
   						<div class="col-md-12 section-title text-center mb-0">
   							<h2 class="pb-10 fw700">SixSq in action.</h2>
   							<p class="sub-title fw500">We are a software company, producing secure, scalable and distributed products. Most of our technical software is open source.</p>
-  							<p class="sub-title fw500">Discover the achievements we have enabled with our customers and partners.</p>
+  							<p class="sub-title fw500">Discover how SixSq helps customers take advantage of the edge.</p>
   						</div>
   				</div>
   			</div>
