update case studies

--- a/css/main.css
+++ b/css/main.css
@@ -878,9 +878,9 @@ a.anchor {
     .banner-page-int.banner-retail .banner-content {
       background-color: rgba(0, 0, 0, 0.5);
       padding-top: 20px; }
-  .banner-page-int.banner-science {
+  .banner-page-int.banner-aerospace {
     background: url(/img/banner/science.png) no-repeat bottom center/cover; }
-    .banner-page-int.banner-science .banner-content {
+    .banner-page-int.banner-aerospace .banner-content {
       background-color: rgba(0, 0, 0, 0.5);
       padding-top: 20px; }
   .banner-page-int.banner-nuvlabox {
