--- a/sass/theme/_banner.scss
+++ b/sass/theme/_banner.scss
@@ -68,7 +68,7 @@
       padding-top: 20px;
     }
 	}
-	&.banner-science {
+	&.banner-aerospace {
 		background: url(/img/banner/science.png) no-repeat bottom center/cover;
 		@include mobile {
 		}
