--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -22,11 +22,11 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink-casestudies" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Case Studies</a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink-solutions">
                   <a class="dropdown-item" href="/casestudies/overview"><b>Overview</b></a>
-                  <a class="dropdown-item" href="/casestudies/city/overview"><b>City</b>: Edge, Cloud and IoT solutions for Smart Cities</a>
+                  <a class="dropdown-item" href="/casestudies/city/overview"><b>Critical Infrastructure</b>: Smart Edge &amp; Cloud for Critical Infrastructure</a>
                   <a class="dropdown-item" href="/casestudies/outpost/overview"><b>Outpost</b>: Rapid infrastructure for remote areas</a>
                   <a class="dropdown-item" href="/casestudies/retail/overview"><b>Retail</b>: In-store (real-time) analytics</a>
                   <!-- <a class="dropdown-item" href="/casestudies/factory/overview"><b>Factory</b>: Smart manufacturing</a> -->
-                  <a class="dropdown-item" href="/casestudies/science/overview"><b>Science</b>: Big Data at the Edge and in the Cloud for Science</a>
+                  <a class="dropdown-item" href="/casestudies/science/overview"><b>Aerospace</b>: Big Data at the Edge and in the Cloud for Aerospace</a>
                 </div>
               </li>
               <li class="nav-item dropdown">
