--- a/_includes/highlighted-with-image-item-no-date.html
+++ b/_includes/highlighted-with-image-item-no-date.html
@@ -8,15 +8,13 @@
               </div>
             {% endif %}
             <h3 class="mt-20 text-center fw600">{{ post.title }}</h3>
-            <div>
-                <p class="date mt-20" style="text-align: left">{{ post.date | date_to_long_string }}</p>
-				<p class="mt-10" style="text-align: justify">{{ post.content | strip_html | truncatewords: 30 }}</p>
-				<p class="button mt-10 text-center"/>
-            </div>
+			<p class="mt-10" style="text-align: justify">{{ post.content | strip_html | truncatewords: 30 }}</p>
+			<p class="button mt-10 text-center">
               {% if post.link %}
                 {% assign url = post.link  %}
               {% else %}
                 {% assign url = post.url  %}
               {% endif %}
               <a class="btn-sixsq mt-20 color-3 text-center" href="{{ url }}">Take a Look</a>
+			</p>
 		</div>
