--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -9,7 +9,7 @@
     {{ page.content }}
 		<section class="section-is-it-for">
 			<div class="container">
-				<div class="row icon-is-it-for pb-50 pt-50">
+				<div class="row justify-content-center icon-is-it-for pb-50 pt-50">
           {% for post in site.news reversed %}
             {% include highlighted-with-image-item.html %}
           {% endfor %}
