--- a/css/main.css
+++ b/css/main.css
@@ -720,6 +720,10 @@ a.anchor {
 .cropped img {
   margin: 0px 0px 0px 0px; }
 
+.date {
+  font-size: 14px !important;
+  font-style: italic; }
+
 .header-welcome, .header-std {
   position: relative;
   z-index: 99999; }
@@ -1132,8 +1136,7 @@ a.anchor {
   text-align: center;
   background: #333; }
 .section-is-it-for .icon-is-it-for .icon {
-  padding: 40px;
-  height: 100%; }
+  padding: 40px; }
   .section-is-it-for .icon-is-it-for .icon:hover {
     background: #fff;
     box-shadow: 0px 15px 30px 0px rgba(0, 0, 0, 0.1);
