--- a/_includes/casestudies-sub-menu.html
+++ b/_includes/casestudies-sub-menu.html
@@ -4,8 +4,8 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#subNavbarNavDropdown" aria-controls="subNavbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="/casestudies/{{ page.product }}/overview">
-						<h2 class="text-white fw600">Case study: {{ page.product-name }}</h2>
+          <a class="navbar-brand" href="/casestudies/overview">
+						<h2 class="text-white fw600">Case studies</h2>
           </a>
         </nav>
 			</div>
