--- a/_includes/terms-sub-menu.html
+++ b/_includes/terms-sub-menu.html
@@ -13,6 +13,9 @@
                 <a class="nav-link" id="navbarMenuLink-overview" href="/about/terms">Overview</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" id="navbarMenuLink-app-license" href="/terms/app-license">App License</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-aai-privacy" href="/terms/privacy">Privacy</a>
               </li>
               <li class="nav-item">
