Update SixSq legal status (Sàrl to SA)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','{{ site.google-tag-id }}');</script>
 <!-- End Google Tag Manager -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="SixSq Sàrl">
+	<meta name="author" content="SixSq SA">
 	<meta name="description" content="{% if page.summary %}{{ page.summary }}{% else %}{{ site.summary }}{% endif %}">
 	<meta name="keywords" content="{% if page.meta-keywords %}{{ page.meta-keywords }}{% else %}{{ site.keywords }}{% endif %}">
 	<meta charset="UTF-8">
