--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -4,7 +4,7 @@
 			<div class="row footer-content">
 					<div class="col-md-4">
 							<p class="copyright copy-left-text text-white">Copyright © 2021 SixSq SA. All rights reserved. SixSq, Nuvla, NuvlaBox are registered trademarks of SixSq SA in Switzerland and other countries.</p>
-							<p class="copyright copy-left-text text-white">Other registered trademark are owned by their owner.</p>
+							<p class="copyright copy-left-text text-white">Other registered trademarks are owned by their owner.</p>
 						</div>
 					<div class="col-md-4 text-center">
 						<ul class="footer-social color-2 mb-20">
