--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -52,13 +52,14 @@
           </div>
         </div>
       </section> -->
-      <!-- <section id="free-integration" class="pt-50 pb-50 section-is-it-for bg-blue-e0">
-        <div class="container bg-grey-f9 text-center pt-20 pb-20 highlight-image" style="border: 5px dashed;">
-          <h1 class="fw700 pb-20">Nuvla.io Marketplace Pre-Launch</h1>
-          <h2>Limited offer October only: free integration of your app into the Marketplace</h2>
-          <h3>Interested? Read details <a href="https://nuvla.io/marketplace">here</a>.</h3>
+      <section id="announcement" class="pt-50 pb-50 section-is-it-for bg-blue-e0">
+        <div class="container text-center pt-20 pb-20 highlight-image">
+          <img class="bg-white" src="/img/content/announcement-background.png">
+  				<div class="section-title text-center pt-40">
+          	<a class="btn-sixsq all text-center" href="/news/2021-11-02-news-ekinops-acquisition/">Read press release</a>
+        	</div>
         </div>
-      </section> -->
+      </section>
   		<div class="section-services section-full">
   			<div class="container">
   				<div class="row justify-content-center">
