--- a/_layouts/about-us.html
+++ b/_layouts/about-us.html
@@ -19,7 +19,7 @@
 		</section>
 
 		<section class="section-about section-is-it-for">
-			<div class="container pt-10 pb-50">
+			<div class="container pt-10 pb-50" style="text-align: justify">
         <h2 class="text-center">Where we come from</h2>
         {{ page.content | markdownify }}
 			</div>
